# smoltts

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: librispeech.json  libritts_bytes.json  libritts_kokoro.json  ljspeech.json  pg_kokoro.json  pg_kokoro_wte.json
config/emilia/: amortize.json  baseline.json  resume_from_checkpoint.json
config/kokoro_v0.19/: pg_kokoro.json  pg_kokoro_wte_nsys.json
config/kokoro_v1/: baseline.json  deduplicate_code_0.json  scaleup.json
config/librispeech/: librispeech_cooldown.json
config/ljspeech/: ljspeech.json
data_pipeline/: README.md  encode_libritts.py  tokenize_libritts.ipynb
data_pipeline/preview/: app.py  (+1 more)
dataset/: README.md  convert_weight_dict.ipynb  create_batches.ipynb  create_bytelevel_init.ipynb  create_smoltts_init.ipynb  decode_audio.ipynb  encode_libritts.ipynb  encode_libritts.py  encode_ljspeech.ipynb  sanity_check.ipynb  test.ipynb  test_equivalence.ipynb  tokenize_libritts.ipynb  tokenize_libritts_byte.ipynb  tokenize_libritts_byte_kokoro.ipynb  tokenize_single_utterance.ipynb  upload_libritts.ipynb
mlx_inference/: README.md  default_settings.json  example.ipynb  generate.py  hello.py  pyproject.toml  server.py  settings.py  test.ipynb  tts_core.py
mlx_inference/codec/: conv.py  mimi.py  rvq.py  seanet.py  transformer.py
mlx_inference/io/: wav.py
mlx_inference/lm/: config.py  dual_ar.py  generate.py  rq_transformer.py
mlx_inference/lm/utils/: constraints.py  prompt.py
mlx_inference/model/: dual_ar.py  generate.py
mlx_inference/model/utils/: constraints.py  prompt.py
mlx_inference/routes/: elevenlabs.py  openai.py
mlx_inference/settings/: __init__.py  default_settings.json
mlx_inference/src/smoltts_mlx/: __init__.py
mlx_inference/src/smoltts_mlx/codec/: mimi.py  rvq.py  seanet.py  transformer.py
mlx_inference/src/smoltts_mlx/generate/: csm.py  fish.py  utils.py
mlx_inference/src/smoltts_mlx/lm/: config.py  csm.py  generate.py  rq_transformer.py
mlx_inference/src/smoltts_mlx/lm/utils/: constraints.py  prompt.py  samplers.py
mlx_inference/src/smoltts_mlx/loaders/: __init__.py
mlx_inference/src/smoltts_mlx/scripts/: server.py
mlx_inference/src/smoltts_mlx/server/: settings.py  tts_core.py
mlx_inference/testing/: test_codec.py
mlx_inference/tests/: test_csm.py  test_generate.py
mlx_inference/utils/: create_csm_init.ipynb
model/: convert_safetensors.py  dual_ar.py
sample_model_sizes/: smoltts_byte_150m.json  smoltts_byte_150m_wte.json  smoltts_byte_60m_wte.json  smoltts_byte_70m.json
train/: README.md  config.py  convert_safetensors.py  data.py  main.py  optim.py  pyproject.toml  state.py  train.py  trainer.py
(+23 files in other folders)
