[project]
name = "mlx-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.6",
    "huggingface-hub>=0.27.1",
    "mlx>=0.22.0",
    "numpy>=2.0.2",
    "pydantic>=2.10.5",
    "pydub>=0.25.1",
    "rustymimi>=0.2.2",
    "scipy>=1.13.1",
    "soundfile>=0.13.1",
    "tokenizers>=0.21.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.34.0",
]
